Fixed the ARCH env variable for codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ jobs:
 # AMD64
   include:
     - arch: amd64
-      env: CXX=g++-9 CC=gcc-9 GCOV=gcov-9
+      env: CXX=g++-9 CC=gcc-9 GCOV=gcov-9 ARCH=amd64
       before_install:
         - mkdir -p ~/.local/bin
         - eval "PATH=$PATH:~/.local/bin"
@@ -35,7 +35,7 @@ jobs:
         - pip3 install --user meson
         - pip3 install --user codecov
     - arch: amd64
-      env: CXX=g++-8 CC=gcc-8 GCOV=gcov-8
+      env: CXX=g++-8 CC=gcc-8 GCOV=gcov-8 ARCH=amd64
       before_install:
         - mkdir -p ~/.local/bin
         - eval "PATH=$PATH:~/.local/bin"
@@ -62,7 +62,7 @@ jobs:
         - pip3 install --user meson
         - pip3 install --user codecov
     - arch: amd64
-      env: CXX=g++-7 CC=gcc-7 GCOV=gcov-7
+      env: CXX=g++-7 CC=gcc-7 GCOV=gcov-7 ARCH=amd64
       before_install:
         - mkdir -p ~/.local/bin
         - eval "PATH=$PATH:~/.local/bin"
@@ -89,7 +89,7 @@ jobs:
         - pip3 install --user meson
         - pip3 install --user codecov
     - arch: amd64
-      env: CXX=clang++-9 CC=clang-9 GCOV='llvm-cov gcov'
+      env: CXX=clang++-9 CC=clang-9 GCOV='llvm-cov gcov' ARCH=amd64
       before_install:
         - mkdir -p ~/.local/bin
         - eval "PATH=$PATH:~/.local/bin"
@@ -119,7 +119,7 @@ jobs:
         - pip3 install --user meson
         - pip3 install --user codecov
     - arch: amd64
-      env: CXX=clang++-8 CC=clang-8 GCOV='llvm-cov gcov'
+      env: CXX=clang++-8 CC=clang-8 GCOV='llvm-cov gcov' ARCH=amd64
       before_install:
         - mkdir -p ~/.local/bin
         - eval "PATH=$PATH:~/.local/bin"
@@ -149,7 +149,7 @@ jobs:
         - pip3 install --user meson
         - pip3 install --user codecov
     - arch: amd64
-      env: CXX=clang++-7 CC=clang-7 GCOV='llvm-cov gcov'
+      env: CXX=clang++-7 CC=clang-7 GCOV='llvm-cov gcov' ARCH=amd64
       before_install:
         - mkdir -p ~/.local/bin
         - eval "PATH=$PATH:~/.local/bin"
@@ -180,7 +180,7 @@ jobs:
         - pip3 install --user codecov
 # ARM64
     - arch: arm64
-      env: CXX=g++-9 CC=gcc-9 GCOV=gcov-9
+      env: CXX=g++-9 CC=gcc-9 GCOV=gcov-9 ARCH=arm64
       before_install:
         - mkdir -p ~/.local/bin
         - eval "PATH=$PATH:~/.local/bin"
@@ -207,7 +207,7 @@ jobs:
         - pip3 install --user meson
         - pip3 install --user codecov
     - arch: arm64
-      env: CXX=g++-8 CC=gcc-8 GCOV=gcov-8
+      env: CXX=g++-8 CC=gcc-8 GCOV=gcov-8 ARCH=arm64
       before_install:
         - mkdir -p ~/.local/bin
         - eval "PATH=$PATH:~/.local/bin"
@@ -234,7 +234,7 @@ jobs:
         - pip3 install --user meson
         - pip3 install --user codecov
     - arch: arm64
-      env: CXX=g++-7 CC=gcc-7 GCOV=gcov-7
+      env: CXX=g++-7 CC=gcc-7 GCOV=gcov-7 ARCH=arm64
       before_install:
         - mkdir -p ~/.local/bin
         - eval "PATH=$PATH:~/.local/bin"
@@ -262,7 +262,7 @@ jobs:
         - pip3 install --user codecov
 # # PPC64LE
 #     - arch: ppc64le
-#       env: CXX=g++-9 CC=gcc-9 GCOV=gcov-9
+#       env: CXX=g++-9 CC=gcc-9 GCOV=gcov-9 ARCH=ppc64le
 #       before_install:
 #         - mkdir -p ~/.local/bin
 #         - eval "PATH=$PATH:~/.local/bin"
@@ -289,7 +289,7 @@ jobs:
 #         - pip3 install --user meson
 #         - pip3 install --user codecov
     # - arch: ppc64le
-    #   env: CXX=g++-8 CC=gcc-8 GCOV=gcov-8
+    #   env: CXX=g++-8 CC=gcc-8 GCOV=gcov-8 ARCH=ppc64le
     #   before_install:
     #     - mkdir -p ~/.local/bin
     #     - eval "PATH=$PATH:~/.local/bin"
@@ -316,7 +316,7 @@ jobs:
     #     - pip3 install --user meson
     #     - pip3 install --user codecov
     # - arch: ppc64le
-    #   env: CXX=g++-7 CC=gcc-7 GCOV=gcov-7
+    #   env: CXX=g++-7 CC=gcc-7 GCOV=gcov-7 ARCH=ppc64le
     #   before_install:
     #     - mkdir -p ~/.local/bin
     #     - eval "PATH=$PATH:~/.local/bin"
@@ -350,4 +350,4 @@ script:
 
 after_success:
   - cd build
-  - codecov --gcov-exec "$GCOV" -e MACHTYPE -e CXX
+  - codecov --gcov-exec "$GCOV" -e ARCH -e CXX
