--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,8 @@ project(
 	'cpp',
 	default_options: [
 		'cpp_std=gnu++17',
-		'warning_level=3'
+		'warning_level=3',
+		'b_lto=true',
 	],
 	version: '0.1'
 )
