--- a/meson.build
+++ b/meson.build
@@ -120,3 +120,78 @@ endif
 
 
 run_target('lint', command: ['etc/lint.sh'])
+
+if get_option('valgrind_checks')
+	valgrind = find_program('valgrind', required: true)
+
+	common_args = [
+		'--track-fds=yes',
+		'--demangle=yes',
+		'--num-callers=50',
+		'--error-limit=no',
+		'--keep-debuginfo=yes',
+		'--show-error-list=yes',
+		'--read-inline-info=yes',
+		'--read-var-info=yes',
+		'--trace-children=yes',
+		'--run-libc-freeres=yes',
+		'--run-cxx-freeres=yes',
+		'--fair-sched=yes',
+	]
+
+
+	memcheck = run_target('memcheck',
+		command: [
+			valgrind,
+			'--tool=memcheck',
+			common_args,
+			'--xml=yes',
+			'--xml-file=@0@/sns-test.%p.err.xml'.format(meson.build_root()),
+			'--leak-check=full',
+			'--show-leak-kinds=all',
+			'--leak-resolution=high',
+			'--leak-check-heuristics=all',
+			'--xtree-leak=yes',
+			'--xtree-leak-file=@0@/sns-test.%p.kcg'.format(meson.build_root()),
+			'--undef-value-errors=yes',
+			'--track-origins=yes',
+			'--expensive-definedness-checks=yes',
+			catch_harness
+		],
+		depends: catch_harness
+	)
+
+	callgrind = run_target('callgrind',
+		command: [
+			valgrind,
+			'--tool=callgrind',
+			common_args,
+			'--dump-line=yes',
+			'--collect-jumps=yes',
+			'--collect-systime=yes',
+			'--collect-bus=yes',
+			'--separate-threads=yes',
+			'--cache-sim=yes',
+			'--branch-sim=yes',
+			'--simulate-wb=yes',
+			'--cacheuse=yes',
+			'--callgrind-out-file=@0@/sns-test.%p.cg'.format(meson.build_root()),
+			catch_harness
+		],
+		depends: catch_harness
+	)
+
+	massif = run_target('massif',
+		command: [
+			valgrind,
+			'--tool=massif',
+			common_args,
+			'--heap=yes',
+			'--stacks=yes',
+			'--depth=50',
+			'--massif-out-file=@0@/sns-test.%p.mf'.format(meson.build_root()),
+			catch_harness
+		],
+		depends: catch_harness
+	)
+endif
