--- a/.travis.yml
+++ b/.travis.yml
@@ -344,7 +344,7 @@ jobs:
     #     - pip3 install --user codecov
 
 script:
-  - meson -Db_coverage=true -Db_sanitize=address,undefined build
+  - meson -Db_coverage=true -Db_sanitize=address,undefined -Dvalgrind_checks=false build
   - ninja -C build
   - ninja -C build test
 
