Fixed the C++ filesystem header stuff so it should now work on clang and GCC older than 9

--- a/meson.build
+++ b/meson.build
@@ -16,12 +16,12 @@ deps = [
 	dependency('ncursesw', required: true, version: '>=6.0.20160213')
 ]
 
-if cxx.get_id() == 'clang' or cxx.version().version_compare('<9.0.0')
-	if cxx.has_header('filesystem') == false
-		error('Unable to find C++17 filesystem header')
+if (cxx.get_id() == 'gcc' and cxx.version().version_compare('<9.0.0')) or (cxx.get_id() == 'clang' and cxx.version().version_compare('<9.0.0'))
+	if cxx.has_header('experimental/filesystem') == false
+		error('Unable to find C++17 experimental/filesystem header')
 	endif
 	deps += [ cxx.find_library('libstdc++fs', required: true) ]
-
+	add_global_arguments('-DCXXFS_EXP',	language: 'cpp')
 endif
 
 srcs = [
