--- a/.travis.yml
+++ b/.travis.yml
@@ -203,9 +203,9 @@ jobs:
         - cp ninja ~/.local/bin/
         - popd
 
-        - pip3 install --user wheel
-        - pip3 install --user meson
-        - pip3 install --user codecov
+        - sudo pip3 install --user wheel
+        - sudo pip3 install --user meson
+        - sudo pip3 install --user codecov
     - arch: arm64
       env: CXX=g++-8 CC=gcc-8 GCOV=gcov-8 ARCH=arm64
       before_install:
@@ -230,9 +230,9 @@ jobs:
         - cp ninja ~/.local/bin/
         - popd
 
-        - pip3 install --user wheel
-        - pip3 install --user meson
-        - pip3 install --user codecov
+        - sudo pip3 install --user wheel
+        - sudo pip3 install --user meson
+        - sudo pip3 install --user codecov
     - arch: arm64
       env: CXX=g++-7 CC=gcc-7 GCOV=gcov-7 ARCH=arm64
       before_install:
@@ -257,9 +257,9 @@ jobs:
         - cp ninja ~/.local/bin/
         - popd
 
-        - pip3 install --user wheel
-        - pip3 install --user meson
-        - pip3 install --user codecov
+        - sudo pip3 install --user wheel
+        - sudo pip3 install --user meson
+        - sudo pip3 install --user codecov
 # # PPC64LE
 #     - arch: ppc64le
 #       env: CXX=g++-9 CC=gcc-9 GCOV=gcov-9 ARCH=ppc64le
