--- a/.travis.yml
+++ b/.travis.yml
@@ -260,88 +260,172 @@ jobs:
         - sudo pip3 install --user wheel
         - sudo pip3 install --user meson
         - sudo pip3 install --user codecov
-# # PPC64LE
-#     - arch: ppc64le
-#       env: CXX=g++-9 CC=gcc-9 GCOV=gcov-9 ARCH=ppc64le
-#       before_install:
-#         - mkdir -p ~/.local/bin
-#         - eval "PATH=$PATH:~/.local/bin"
-#         - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-#       install:
-#         - sudo apt-get install python3 -y
-#         - sudo apt-get install python3-pip -y
-#         - sudo apt-get install python3-setuptools -y
+# PPC64LE
+    - arch: ppc64le
+      env: CXX=g++-9 CC=gcc-9 GCOV=gcov-9 ARCH=ppc64le
+      before_install:
+        - mkdir -p ~/.local/bin
+        - eval "PATH=$PATH:~/.local/bin"
+        - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+      install:
+        - sudo apt-get install python3 -y
+        - sudo apt-get install python3-pip -y
+        - sudo apt-get install python3-setuptools -y
 
-#         - sudo apt-get install g++-9 -y
+        - sudo apt-get install g++-9 -y
 
-#         - sudo apt-get install pkg-config -y
-#         - sudo apt-get install zlib1g-dev -y
-#         - sudo apt-get install libncursesw5-dev -y
+        - sudo apt-get install pkg-config -y
+        - sudo apt-get install zlib1g-dev -y
+        - sudo apt-get install libncursesw5-dev -y
 
-#         - pushd /tmp
-#         - git clone https://github.com/ninja-build/ninja.git
-#         - cd ninja
-#         - python3 ./configure.py --bootstrap
-#         - cp ninja ~/.local/bin/
-#         - popd
+        - pushd /tmp
+        - git clone https://github.com/ninja-build/ninja.git
+        - cd ninja
+        - python3 ./configure.py --bootstrap
+        - cp ninja ~/.local/bin/
+        - popd
 
-#         - pip3 install --user wheel
-#         - pip3 install --user meson
-#         - pip3 install --user codecov
-    # - arch: ppc64le
-    #   env: CXX=g++-8 CC=gcc-8 GCOV=gcov-8 ARCH=ppc64le
-    #   before_install:
-    #     - mkdir -p ~/.local/bin
-    #     - eval "PATH=$PATH:~/.local/bin"
-    #     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-    #   install:
-    #     - sudo apt-get install python3 -y
-    #     - sudo apt-get install python3-pip -y
-    #     - sudo apt-get install python3-setuptools -y
+        - pip3 install --user wheel
+        - pip3 install --user meson
+        - pip3 install --user codecov
+    - arch: ppc64le
+      env: CXX=g++-8 CC=gcc-8 GCOV=gcov-8 ARCH=ppc64le
+      before_install:
+        - mkdir -p ~/.local/bin
+        - eval "PATH=$PATH:~/.local/bin"
+        - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+      install:
+        - sudo apt-get install python3 -y
+        - sudo apt-get install python3-pip -y
+        - sudo apt-get install python3-setuptools -y
 
-    #     - sudo apt-get install g++-8 -y
+        - sudo apt-get install g++-8 -y
 
-    #     - sudo apt-get install pkg-config -y
-    #     - sudo apt-get install zlib1g-dev -y
-    #     - sudo apt-get install libncursesw5-dev -y
+        - sudo apt-get install pkg-config -y
+        - sudo apt-get install zlib1g-dev -y
+        - sudo apt-get install libncursesw5-dev -y
 
-    #     - pushd /tmp
-    #     - git clone https://github.com/ninja-build/ninja.git
-    #     - cd ninja
-    #     - python3 ./configure.py --bootstrap
-    #     - cp ninja ~/.local/bin/
-    #     - popd
+        - pushd /tmp
+        - git clone https://github.com/ninja-build/ninja.git
+        - cd ninja
+        - python3 ./configure.py --bootstrap
+        - cp ninja ~/.local/bin/
+        - popd
 
-    #     - pip3 install --user wheel
-    #     - pip3 install --user meson
-    #     - pip3 install --user codecov
-    # - arch: ppc64le
-    #   env: CXX=g++-7 CC=gcc-7 GCOV=gcov-7 ARCH=ppc64le
-    #   before_install:
-    #     - mkdir -p ~/.local/bin
-    #     - eval "PATH=$PATH:~/.local/bin"
-    #     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-    #   install:
-    #     - sudo apt-get install python3 -y
-    #     - sudo apt-get install python3-pip -y
-    #     - sudo apt-get install python3-setuptools -y
+        - pip3 install --user wheel
+        - pip3 install --user meson
+        - pip3 install --user codecov
+    - arch: ppc64le
+      env: CXX=g++-7 CC=gcc-7 GCOV=gcov-7 ARCH=ppc64le
+      before_install:
+        - mkdir -p ~/.local/bin
+        - eval "PATH=$PATH:~/.local/bin"
+        - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+      install:
+        - sudo apt-get install python3 -y
+        - sudo apt-get install python3-pip -y
+        - sudo apt-get install python3-setuptools -y
 
-    #     - sudo apt-get install g++-7 -y
+        - sudo apt-get install g++-7 -y
 
-    #     - sudo apt-get install pkg-config -y
-    #     - sudo apt-get install zlib1g-dev -y
-    #     - sudo apt-get install libncursesw5-dev -y
+        - sudo apt-get install pkg-config -y
+        - sudo apt-get install zlib1g-dev -y
+        - sudo apt-get install libncursesw5-dev -y
 
-    #     - pushd /tmp
-    #     - git clone https://github.com/ninja-build/ninja.git
-    #     - cd ninja
-    #     - python3 ./configure.py --bootstrap
-    #     - cp ninja ~/.local/bin/
-    #     - popd
+        - pushd /tmp
+        - git clone https://github.com/ninja-build/ninja.git
+        - cd ninja
+        - python3 ./configure.py --bootstrap
+        - cp ninja ~/.local/bin/
+        - popd
 
-    #     - pip3 install --user wheel
-    #     - pip3 install --user meson
-    #     - pip3 install --user codecov
+        - pip3 install --user wheel
+        - pip3 install --user meson
+        - pip3 install --user codecov
+
+
+# s390x
+    - arch: s390x
+      env: CXX=g++-9 CC=gcc-9 GCOV=gcov-9 ARCH=s390x
+      before_install:
+        - mkdir -p ~/.local/bin
+        - eval "PATH=$PATH:~/.local/bin"
+        - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+      install:
+        - sudo apt-get install python3 -y
+        - sudo apt-get install python3-pip -y
+        - sudo apt-get install python3-setuptools -y
+
+        - sudo apt-get install g++-9 -y
+
+        - sudo apt-get install pkg-config -y
+        - sudo apt-get install zlib1g-dev -y
+        - sudo apt-get install libncursesw5-dev -y
+
+        - pushd /tmp
+        - git clone https://github.com/ninja-build/ninja.git
+        - cd ninja
+        - python3 ./configure.py --bootstrap
+        - cp ninja ~/.local/bin/
+        - popd
+
+        - pip3 install --user wheel
+        - pip3 install --user meson
+        - pip3 install --user codecov
+    - arch: s390x
+      env: CXX=g++-8 CC=gcc-8 GCOV=gcov-8 ARCH=s390x
+      before_install:
+        - mkdir -p ~/.local/bin
+        - eval "PATH=$PATH:~/.local/bin"
+        - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+      install:
+        - sudo apt-get install python3 -y
+        - sudo apt-get install python3-pip -y
+        - sudo apt-get install python3-setuptools -y
+
+        - sudo apt-get install g++-8 -y
+
+        - sudo apt-get install pkg-config -y
+        - sudo apt-get install zlib1g-dev -y
+        - sudo apt-get install libncursesw5-dev -y
+
+        - pushd /tmp
+        - git clone https://github.com/ninja-build/ninja.git
+        - cd ninja
+        - python3 ./configure.py --bootstrap
+        - cp ninja ~/.local/bin/
+        - popd
+
+        - pip3 install --user wheel
+        - pip3 install --user meson
+        - pip3 install --user codecov
+    - arch: s390x
+      env: CXX=g++-7 CC=gcc-7 GCOV=gcov-7 ARCH=s390x
+      before_install:
+        - mkdir -p ~/.local/bin
+        - eval "PATH=$PATH:~/.local/bin"
+        - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+      install:
+        - sudo apt-get install python3 -y
+        - sudo apt-get install python3-pip -y
+        - sudo apt-get install python3-setuptools -y
+
+        - sudo apt-get install g++-7 -y
+
+        - sudo apt-get install pkg-config -y
+        - sudo apt-get install zlib1g-dev -y
+        - sudo apt-get install libncursesw5-dev -y
+
+        - pushd /tmp
+        - git clone https://github.com/ninja-build/ninja.git
+        - cd ninja
+        - python3 ./configure.py --bootstrap
+        - cp ninja ~/.local/bin/
+        - popd
+
+        - pip3 install --user wheel
+        - pip3 install --user meson
+        - pip3 install --user codecov
 
 script:
   - meson -Db_coverage=true -Db_sanitize=address,undefined -Dvalgrind_checks=false build
